# euler

./: .gitignore  README.MD  dune-project
.github/workflows/: ocaml.yml
euler1/: collection.ml  dune  recursion.ml  tailrecursion.ml
euler2/: collection2.ml  dune  recursion2.ml
src/euler1/: collection.ml  dune  recursion.ml  tailrecursion.ml
src/euler2/: collection2.ml  dune  pattern2.ml  recursion2.ml
test/: dune  euler1.ml  euler2.ml
