(lang dune 3.5)

(name euler)

(generate_opam_files true)

(source
 (github TimeToStop/euler))

(authors "Ratushnyak E. A.")

(maintainers "Ratushnyak E. A.")

(license LICENSE)

(documentation https://github.com/TimeToStop/euler)

(package
 (name euler)
 (synopsis "Lab1")
 (description "Functional programming first lab in OCaml")
 (depends ocaml dune))