(executable
 (name collection)
 (public_name collection)
 ; (wrapped false)
 (modules collection)
 (libraries collection))

(executable
 (name recursion)
 (public_name recursion)
 ; (wrapped false)
 (modules recursion)
 (libraries recursion))

(executable
 (name tailrecursion)
 (public_name tailrecursion)
 ; (wrapped false)
 (modules tailrecursion)
 (libraries tailrecursion))
