(executable
 (name collection)
 (public_name collection)
 (modules collection)
 (libraries collection))

(executable
 (name recursion)
 (public_name recursion)
 (modules recursion)
 (libraries recursion))

(executable
 (name tailrecursion)
 (public_name tailrecursion)
 (modules tailrecursion)
 (libraries tailrecursion))
